# tree-sitter-hyprlang

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  flake.nix  go.mod  grammar.js  jsconfig.json  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-hyprlang.pc.in
bindings/c/tree_sitter/: tree-sitter-hyprlang.h
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_hyprlang/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterHyprlangTests/: TreeSitterHyprlangTests.swift
plugin/: init.lua
queries/: folds.scm  highlights.scm
queries/hyprlang/: highlights.scm  indents.scm  injections.scm  outline.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: config.txt
test/highlight/: config.conf
