[package]
name = "tree-sitter-hyprlang"
description = "hyprlang grammar for the tree-sitter parsing library"
version = "3.0.0"
authors = ["LIOKA Ranarison Fiderana"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "hyprlang"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter-grammars/tree-sitter-hyprlang"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.7"
