[package]
name = "tree-sitter-hyprlang"
description = "hyprlang grammar for the tree-sitter parsing library"
version = "3.1.0"
authors = ["LIOKA Ranarison Fiderana"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "hyprlang"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/tree-sitter-grammars/tree-sitter-hyprlang"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/**",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
